--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Jimmy Herman
+title: Abigail Orzechowski
 
-logo: /images/jimmy-headshot.jpeg
+logo: /images/abigail_orzechowski_headshot.jpeg
 
 theme: jekyll-theme-minimal
 
-cv_path: /cv/james_herman_resume.pdf
+cv_path: /cv/abigail_orzechowski_resume.pdf
